--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,6 +66,7 @@
         "shared_mutex": "cpp",
         "stop_token": "cpp",
         "thread": "cpp",
-        "*.def": "cpp"
+        "*.def": "cpp",
+        "variant": "cpp"
     }
 }
