seperwated visitor.cpp to 3 files :3c

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,9 @@ add_llvm_executable(${EXECUTABLE_NAME}
    src/Compiler.cpp
    src/semantic_analysis.cpp
    src/visitor.cpp
+   src/CompileStatement.cpp
+   src/CompileExpr.cpp
+   src/CompileHighLevel.cpp
    src/CompilerUtil.cpp
 
 )
