- beagn work on a CLI - added more operations to the compiler - better error handeling

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -67,6 +67,7 @@
         "stop_token": "cpp",
         "thread": "cpp",
         "*.def": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "any": "cpp"
     }
 }
