added ranges, enums to lexxer

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -68,6 +68,7 @@
         "thread": "cpp",
         "*.def": "cpp",
         "variant": "cpp",
-        "any": "cpp"
+        "any": "cpp",
+        "stdlib.h": "c"
     }
 }
