--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,7 @@ add_llvm_executable(${EXECUTABLE_NAME}
    src/CompileHighLevel.cpp
    src/CompilerUtil.cpp
    src/CompilerContext.cpp
+   src/SemanticTopLevel.cpp
 
 )
 
