added integer math exprs
(I think im going to avoid pointers and instead just do this until I find a better solution)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -71,5 +71,7 @@
         "any": "cpp",
         "stdlib.h": "c",
         "filesystem": "cpp"
-    }
+    },
+    "editor.fontFamily": "'Droid Sans Mono', 'monospace', monospace",
+    "editor.fontLigatures": false
 }
