--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,7 @@ add_llvm_executable(${EXECUTABLE_NAME}
    src/Scope.cpp
    src/CompilerContext.cpp
    src/SemanticGlobalScope.cpp
+   src/ResolveImports.cpp
    src/SemanticLocalScope.cpp
 
 )
